--- a/index.html
+++ b/index.html
@@ -14,7 +14,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <span class="badge badge--secondary badge--small">10% OFF</span>
-  </body>
+  <body></body>
 </html>
