--- a/index.html
+++ b/index.html
@@ -14,21 +14,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Mmanaged Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero
-          necessitatibus tenetur. Obcaecati qui et repudiandae, dolorem placeat
-          porro eveniet!
-        </p>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
